force-app/main/default/objects/Lead/fields/CountryAlpha_2__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha_2__c</fullName>
    <label>Country Alpha-2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>