force-app/main/default/objects/Lead/fields/CountryAlpha_3__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha_3__c</fullName>
    <label>Country Alpha-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>