force-app/main/default/objects/Lead/fields/CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>CountryRegion__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>